# gim-extension

./: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tester.js  tester.js.map  tester.ts  tsconfig.json
ai-server/: analysis-output.json  helpers.py  main.py  prompts.py  pyproject.toml  sample_data.json
demo-sln/: DemoSolution.sln
demo-sln/DemoApp/: Program.cs
demo-sln/DemoLib/: Class1.cs
roslyn-analyzer/: .gitignore  Analyzer.csproj  Program.cs
roslyn-analyzer/Analyzer/: .gitignore  Analyzer.csproj  Analyzer.sln  Program.cs  analysis-output.json
sqlite-server/: main.py  models.py  pyproject.toml  requirements.txt  server.py  tables.py  update_indexes.py
src/: extension.ts
src/test/: extension.test.ts
